resolved error message overflow

--- a/utils/blocks/modal.css
+++ b/utils/blocks/modal.css
@@ -74,7 +74,7 @@
   border: 1px solid #000;
   padding-top: 15px;
   padding-bottom: 19px;
-  margin-bottom: 16px;
+  margin-bottom: 0;
   font-family: "Inter", serif;
   font-style: normal;
   font-weight: 400;
@@ -86,7 +86,7 @@
 }
 .modal__input:last-of-type {
   padding-top: 16px;
-
+  margin-bottom: 16px;
   border: 1px solid #000;
   border-top: none;
   border-left: none;
